[gd_scene load_steps=5 format=3 uid="uid://be2k264lql0dp"]

[ext_resource type="Script" path="res://Scripts/options.gd" id="1_ng2m1"]
[ext_resource type="Theme" uid="uid://0l0pdo16thjx" path="res://menu.tres" id="2_sm4p8"]
[ext_resource type="Script" path="res://Scripts/volume.gd" id="3_6hlyq"]
[ext_resource type="AudioStream" uid="uid://cnvr68jbtktx1" path="res://SFX/menuloop.wav" id="3_umbnx"]

[node name="options" type="CanvasLayer" node_paths=PackedStringArray("options")]
script = ExtResource("1_ng2m1")
options = NodePath("MarginContainer")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_sm4p8")
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Options:"
horizontal_alignment = 1

[node name="Filter" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Filter"]
layout_mode = 2
text = "Filter:              "

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Filter"]
layout_mode = 2
alignment = 1
item_count = 3
selected = 0
popup/item_0/text = "Early 2000s"
popup/item_0/id = 0
popup/item_1/text = "Unplayable"
popup/item_1/id = 1
popup/item_2/text = "Off"
popup/item_2/id = 2

[node name="Window" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Window"]
layout_mode = 2
text = "Window:        "

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Window"]
layout_mode = 2
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "Fullscreen"
popup/item_0/id = 0
popup/item_1/text = "Windowed"
popup/item_1/id = 1

[node name="Volume" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Volume"]
layout_mode = 2
text = "Volume:        "

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Volume"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Volume/HBoxContainer"]
layout_mode = 2
text = "Master:"

[node name="Master" type="HSlider" parent="MarginContainer/VBoxContainer/Volume/HBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("3_6hlyq")
bus_name = "Master"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Volume/HBoxContainer"]
layout_mode = 2
text = "Music:"

[node name="Music" type="HSlider" parent="MarginContainer/VBoxContainer/Volume/HBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("3_6hlyq")
bus_name = "Music"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/Volume/HBoxContainer"]
layout_mode = 2
text = "SFX:"

[node name="SFX" type="HSlider" parent="MarginContainer/VBoxContainer/Volume/HBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("3_6hlyq")
bus_name = "SFX"

[node name="FOV" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FOV"]
layout_mode = 2
text = "Fov:                "

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/FOV"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FOV/HBoxContainer"]
layout_mode = 2
text = "      90      "

[node name="FieldOfView" type="HSlider" parent="MarginContainer/VBoxContainer/FOV/HBoxContainer"]
layout_mode = 2
min_value = 60.0
max_value = 120.0
step = 0.001
value = 90.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="MarginContainer"]
stream = ExtResource("3_umbnx")
autoplay = true
bus = &"Music"

[node name="Back" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("2_sm4p8")
theme_override_font_sizes/font_size = 150
text = "Back"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Filter/OptionButton" to="." method="_on_filter_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Window/OptionButton" to="." method="_on_window_selected"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/FOV/HBoxContainer/FieldOfView" to="." method="_on_field_of_view_value_changed"]
[connection signal="pressed" from="MarginContainer/Back" to="." method="_on_back_pressed"]
